improve resource and manifest
